# holt

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PGO.md  README.md  ROADMAP.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly.yml  release.yml
benches/: Cargo.toml  README.md  RESULTS.md  concurrent.rs  cow_snapshot.rs  eval_cold.sh  eval_hot.sh  main.rs  stress.rs
crates/holt-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
crates/holt-node/src/: lib.rs
crates/holt-node/test/: basic.test.mjs  reopen.test.mjs
docs/: per-node-latch-phase2b.md
docs/design/: cold-read-oracle.md  wal-ring.md
examples/: basic_kv.rs  filesystem_meta.rs  s3_metadata.rs  session_store.rs
fuzz/fuzz_targets/: atomic_model.rs
src/: lib.rs  metrics.rs
src/api/: atomic.rs  builder.rs  config.rs  db.rs  errors.rs  mod.rs  snapshot.rs  stats.rs  tree.rs  view.rs
src/checkpoint/: io.rs  mod.rs  round.rs
src/concurrency/: endpoint_locks.rs  mod.rs
src/engine/: compact.rs  mod.rs  route_cache.rs  simd.rs  walker.rs
src/journal/: codec.rs  group_commit.rs  mod.rs  reader.rs  ring.rs  tests.rs  txn_op.rs  wal_op.rs  writer.rs
src/layout/: header.rs  leaf.rs  mod.rs  node.rs
src/store/: blob_frame.rs  buffer_manager.rs  mod.rs
tests/: concurrent_stress.rs  exclusive_open.rs  layout_invariants.rs  properties.rs  scan_contention_diag.rs  scan_stats.rs  snapshot.rs  tree_smoke.rs  wal_round_trip.rs  wal_torn_tail_recovery.rs  wal_tree_integration.rs  write_delete_churn.rs
(+34 files in other folders)
